# dataset-generator

./: README.md  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg
datasetgenerator/: __init__.py  fields.py  positioning.py
datasetgenerator/factories/: __init__.py  fields.py
datasetgenerator/models/: __init__.py  renderers.py
datasetgenerator/rendering/: __init__.py  renderers.py
documents/: passport_bottom.py  passport_top.py
documents/rus_passport/: __init__.py  passport_bottom.py  passport_top.py
factories/: __init__.py
make_dataset/: __init__.py  __main__.py  fields.py  positioning.py  utils.py
make_dataset/documents/rus_passport/: __init__.py  page2.py  page3.py  passport_bottom.py  passport_top.py
make_dataset/factories/: fields.py
make_dataset/render/: __init__.py  renderers.py
make_dataset/rendering/: renderers.py
models/: __init__.py  renderers.py
