[metadata]
name = datasetgenerator
version = attr: datasetgenerator.__version__
description = Генератор документов позволяет создавать датасеты из документов с данными для обучения нейронных сетей
long_description = file: README.md

[options]
packages = find_namespace:
python_requires = ~= 3.9
install_requires =
    Faker
    Pillow

[options.packages.find]
exclude = documents
